# picosim

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
artifacts/: cortex-m0-long-opcodes.txt  cortex-m0-short-opcodes.txt  hello_serial-pico.elf  hello_world-cm0p.elf  pico-bootrom-b2.dis  pico-bootrom-b2.elf  rom-to-c.sh  syscalls.txt
src/: CMakeLists.txt  base_instructions.cpp  base_instructions.h  bus_controller.cpp  bus_controller.h  debug.cpp  debug.h  disassemble.cpp  disassemble.h  exec_elf32.h  flash.cpp  instruction_generic.h  instructions.cpp  log.cpp  log.h  main.cpp  main.rs  periph_names.cpp  peripherals.cpp  peripherals.h  phys_memory.cpp  phys_memory.h  pico-bootrom-b2.c  processor.cpp  processor.h  read_elf.cpp  registers.cpp  registers.h  riscv_csr.h  simulator.cpp  simulator.h  syscall.cpp  timer.cpp  timer.h  vtty.cpp  vtty.h
src/rp2040/: addressmap.h  exception.h
test/: CMakeLists.txt  README.md  adc_test.cpp  add_hireg_test.cpp  add_imm_test.cpp  add_pc_imm_test.cpp  add_reg_imm_test.cpp  add_reg_reg_test.cpp  add_reg_sp_imm_test.cpp  add_sp_imm_test.cpp  and_test.cpp  arith_test.cpp  asr_imm_test.cpp  asr_reg_test.cpp  bic_test.cpp  branch_cond_test.cpp  branch_exc_test.cpp  branch_exch_test.cpp  branch_jump_test.cpp  branch_link_exch_test.cpp  branch_link_test.cpp  branch_test.cpp  cmn_test.cpp  cmp_hireg_test.cpp  cmp_imm_test.cpp  cmp_reg_test.cpp  cpsie_cpsid_test.cpp  cq_test.cpp  disasm_test.cpp  div_rem_test.cpp  elf_test.cpp  enter_irq_aligned_test.cpp  enter_irq_unaligned_test.cpp  eor_test.cpp  exit_irq_aligned_test.cpp  exit_irq_unaligned_test.cpp  flash_id_test.cpp  force_irq_test.cpp  force_irq_unaligned_test.cpp  irq_preempt_test.cpp  (+58 more)
test/div-rem/: CMakeLists.txt  div-rem.c  div_rem.elf
test/enter-irq-aligned/: CMakeLists.txt  enter_irq_aligned.elf
test/enter-irq-unaligned/: CMakeLists.txt  enter_irq_unaligned.elf
test/exit-irq-aligned/: CMakeLists.txt  README.txt  exit_irq_aligned.elf  main.c
test/exit-irq-unaligned/: CMakeLists.txt  README.txt  exit_irq_unaligned.elf  main.c
test/force-irq/: CMakeLists.txt  README.txt  force-irq.c  force_irq.elf
test/force-irq-unaligned/: CMakeLists.txt  README.txt  force-irq.c  force_irq_unaligned.elf
test/hello-uart/: CMakeLists.txt  hello.c  hello_uart.elf
test/irq-preempt/: CMakeLists.txt  README.txt  irq_preempt.elf  main.c
test/irq-prio-regs/: CMakeLists.txt  irq_prio_regs.elf  main.c
test/irq-same-prio/: CMakeLists.txt  README.txt  irq_same_prio.elf  main.c
test/read-flash-id/: CMakeLists.txt  read-flash-id.c  read_flash_id.elf
test/test_files/: Makefile  README.txt  adc.S  adc.elf  add_hireg.S  add_hireg.elf  add_imm.S  add_imm.elf  add_pc_imm.S  add_pc_imm.elf  add_reg_imm.S  add_reg_imm.elf  add_reg_reg.S  add_reg_reg.elf  add_reg_sp_imm.S  add_reg_sp_imm.elf  add_sp_imm.S  add_sp_imm.elf  and.S  and.elf  asr_imm.S  asr_imm.elf  asr_reg.S  asr_reg.elf  bic.S  bic.elf  branch_cond.S  branch_cond.elf  branch_exch.S  branch_exch.elf  branch_jump.S  branch_jump.elf  branch_link.S  branch_link.elf  branch_link_exch.S  branch_link_exch.elf  cmn.S  cmn.elf  cmp_hireg.S  cmp_hireg.elf  (+114 more)
test/timer-alarm/: CMakeLists.txt  README.txt  timer-alarm.c  timer_alarm.elf
