[package]
name = "picosim"
version = "0.1.0"
authors = ["Jarmo Torvinen <jarmo.torvinen@iki.fi>"]
edition = "2021"

[dependencies]
zmu_cortex_m = { git = "https://github.com/jjkt/zmu.git" }
clap = "2.19"
tabwriter = "1"
error-chain = "0.12"
goblin = "0.5"
pad = "0.1.6"
stderrlog = "0.5"
log = "0.4"

[features]
default = ["picosim", "generic-device"]
picosim = ["zmu_cortex_m/armv6m"]
generic-device = ["zmu_cortex_m/generic-device"]
