set(GTEST_REPEAT "1" CACHE STRING "Number of times to re-run tests")

include(CTest)
include(GoogleTest)
enable_testing()

find_package(SystemCLanguage CONFIG REQUIRED)

add_definitions(-DTEST_DIR="${CMAKE_CURRENT_SOURCE_DIR}")

# Define a function to compile and link a test.
function(TLM_TEST TNAME)
    add_executable(${TNAME}
        ${TNAME}.cpp
        util.cpp
    )
    target_include_directories(${TNAME} BEFORE PUBLIC
        ../src
    )
    target_link_libraries(${TNAME} sim SystemC::systemc gtest dl)
    gtest_discover_tests(${TNAME} EXTRA_ARGS --gtest_repeat=1 PROPERTIES TIMEOUT 60)
endfunction()

function(cpp_TEST TNAME)
    add_executable(${TNAME}
        ${TNAME}.cpp
    )
    target_include_directories(${TNAME} BEFORE PUBLIC
        ../src
    )
    target_link_libraries(${TNAME} sim gtest dl)
    gtest_discover_tests(${TNAME} EXTRA_ARGS --gtest_repeat=1 PROPERTIES TIMEOUT 60)
endfunction()

cpp_test(disasm_test)
tlm_test(smoke_test)
tlm_test(arith_test)
tlm_test(nop_test)
tlm_test(movs_imm_test)
tlm_test(movs_reg_test)
tlm_test(mov_reg_test)
tlm_test(ldr_pc_test)
tlm_test(ldr_sp_test)
tlm_test(ldr_reg_imm_test)
tlm_test(ldr_reg_reg_test)
tlm_test(ldrb_reg_imm_test)
tlm_test(ldrb_reg_reg_test)
tlm_test(ldrsb_reg_reg_test)
tlm_test(ldrh_reg_imm_test)
tlm_test(ldrh_reg_reg_test)
tlm_test(ldrsh_reg_reg_test)
tlm_test(str_reg_imm_test)
tlm_test(str_reg_reg_test)
tlm_test(str_sp_test)
tlm_test(strb_reg_imm_test)
tlm_test(strb_reg_reg_test)
tlm_test(strh_reg_imm_test)
tlm_test(strh_reg_reg_test)
tlm_test(psr_test)
tlm_test(sysreg_test)
tlm_test(cpsie_cpsid_test)
tlm_test(add_reg_sp_imm_test)
tlm_test(add_pc_imm_test)
tlm_test(add_reg_reg_test)
tlm_test(add_reg_imm_test)
tlm_test(add_hireg_test)
tlm_test(add_imm_test)
tlm_test(add_sp_imm_test)
tlm_test(adc_test)
tlm_test(sub_reg_reg_test)
tlm_test(sub_reg_imm_test)
tlm_test(sub_imm_test)
tlm_test(sub_sp_imm_test)
tlm_test(sbc_test)
tlm_test(neg_test)
tlm_test(mul_test)
tlm_test(ldmia_test)
tlm_test(stmia_test)
tlm_test(pop_test)
tlm_test(push_test)
tlm_test(cmp_imm_test)
tlm_test(cmp_reg_test)
tlm_test(cmp_hireg_test)
tlm_test(cmn_test)
tlm_test(and_test)
